<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Music</string>
    <string name="page_recent">Recent</string>
    <string name="page_artists">Artists</string>
    <string name="page_albums">Albums</string>
    <string name="page_songs">Songs</string>
    <string name="page_playlists">Playlists</string>
    <string name="page_genres">Genres</string>
    <string name="page_now_playing">NOW PLAYING</string>
    <string name="page_play_queue">PLAY QUEUE</string>
    <string name="header_albums">ALBUMS</string>
    <string name="header_top_songs">TOP SONGS</string>
    <string name="header_all_songs">ALL SONGS</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_shuffle_item">Shuffle</string>
    <string name="menu_shuffle_all">Shuffle all</string>
    <string name="menu_shuffle_playlist">Shuffle playlist</string>
    <string name="menu_shuffle_album">Shuffle album</string>
    <string name="menu_shuffle_artist">Shuffle artist</string>
    <string name="menu_shuffle_top_tracks">Shuffle top tracks</string>
    <string name="menu_shuffle_recent">Shuffle recently played</string>
    <string name="menu_shuffle_last_added">Shuffle last added</string>
    <string name="menu_play_all">Play all</string>
    <string name="menu_sort_by">Sort by</string>
    <string name="menu_shop">Shop for themes</string>
    <string name="menu_clear_list">Clear list</string>
    <string name="menu_clear_recents">Clear recent</string>
    <string name="menu_clear_queue">Clear queue</string>
    <string name="menu_save_queue">Save queue</string>
    <string name="menu_share">Share</string>
    <string name="menu_add_to_homescreen">Pin to home screen</string>
    <string name="menu_equalizer">Equalizer</string>
    <string name="menu_simple">Simple</string>
    <string name="menu_detailed">Detailed</string>
    <string name="menu_grid">Grid</string>
    <string name="menu_view_as">View as</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="remove_from_recent">Remove from recent</string>
    <string name="remove_from_queue">Remove from queue</string>
    <string name="sort_order_entry_az">A-Z</string>
    <string name="sort_order_entry_za">Z-A</string>
    <string name="sort_order_entry_artist">Artist</string>
    <string name="sort_order_entry_album">Album</string>
    <string name="sort_order_entry_year">Year</string>
    <string name="sort_order_entry_duration">Duration</string>
    <string name="sort_order_entry_date_added">Date added</string>
    <string name="sort_order_entry_track_list">Track list</string>
    <string name="sort_order_entry_number_of_songs">Number of songs</string>
    <string name="sort_order_entry_number_of_albums">Number of albums</string>
    <string name="sort_order_entry_filename">Filename</string>
    <string name="playlist_favorite">Favorite</string>
    <string name="playlist_favorites">Favorites</string>
    <string name="playlist_last_added">Last Added</string>
    <string name="playlist_recently_played">Recently Played</string>
    <string name="playlist_top_tracks">My Top Tracks</string>
    <string name="new_playlist">New playlist</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="overwrite">Overwrite</string>
    <string name="clear">Clear</string>
    <string name="new_playlist_name_template">Playlist <xliff:g id="number">%d</xliff:g></string>
    <string name="create_playlist_prompt">Playlist name</string>
    <string name="delete_dialog_title">Delete <xliff:g id="item" example="album">%s</xliff:g>?</string>
    <string name="clear_top_tracks_title">Clear top tracks?</string>
    <string name="clear_recent_title">Clear recently played?</string>
    <string name="clear_last_added">Clear last added?</string>
    <string name="cannot_be_undone">This cannot be undone</string>
    <string name="delete_warning">This will permanently delete the cached image entries</string>
    <string name="new_photo">Choose photo from Gallery</string>
    <string name="google_search">Google search</string>
    <string name="use_default">Use default photo</string>
    <string name="old_photo">Use old photo</string>
    <string name="context_menu_play_selection">Play</string>
    <string name="context_menu_play_next">Play next</string>
    <string name="context_menu_more_by_artist">More by artist</string>
    <string name="context_menu_rename_playlist">Rename</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_fetch_album_art">Fetch album art</string>
    <string name="context_menu_fetch_artist_image">Fetch artist image</string>
    <string name="context_menu_open_in_play_store">Open in Play Store</string>
    <string name="context_menu_remove_from_recent">Remove from recent</string>
    <string name="context_menu_use_as_ringtone">Use as ringtone</string>
    <string name="context_menu_remove_from_playlist">Remove from playlist</string>
    <string name="accessibility_play">Play</string>
    <string name="accessibility_pause">Pause</string>
    <string name="accessibility_next">Next</string>
    <string name="accessibility_prev">Previous</string>
    <string name="accessibility_shuffle">Shuffle</string>
    <string name="accessibility_shuffle_all">Shuffle all</string>
    <string name="accessibility_repeat">Repeat</string>
    <string name="accessibility_repeat_all">Repeat all</string>
    <string name="accessibility_repeat_one">Repeat one</string>
    <string name="pinned_to_home_screen"><xliff:g id="name">%s</xliff:g> pinned to your home screen</string>
    <string name="could_not_be_pinned_to_home_screen"><xliff:g id="name">%s</xliff:g> could not be pinned to your home screen</string>
    <string name="set_as_ringtone">\'<xliff:g id="name" example="Alarm Bell">%s</xliff:g>\' set as ringtone</string>
    <string name="playlist_renamed">Playlist renamed</string>
    <string name="theme_set"><xliff:g id="name">%s</xliff:g> set as the theme</string>
    <string name="settings_ui_category">Interface</string>
    <string name="settings_storage_category">Storage</string>
    <string name="settings_data_category">Data</string>
    <string name="settings_about_category">About</string>
    <string name="settings_author_title">Author</string>
    <string name="settings_about_apollo">About Apollo</string>
    <string name="settings_special_thanks">Special thanks</string>
    <string name="settings_cyanogenmod_title" translatable="false">CyanogenMod</string>
    <string name="settings_self_title" translatable="false">Andrew Neal</string>
    <string name="settings_lopez_title" translatable="false">A.J. Lopez</string>
    <string name="settings_lopez_summary">Icon and Play Store banner design</string>
    <string name="settings_color_scheme_title">Choose Apollo\'s default color scheme</string>
    <string name="settings_color_scheme_summary">Changes the accent color in Apollo</string>
    <string name="settings_theme_chooser_title">Theme chooser</string>
    <string name="settings_delete_cache_title">Delete cache</string>
    <string name="settings_delete_cache_summary">Remove all cached images</string>
    <string name="settings_download_only_on_wifi_title">Download via Wi-Fi only</string>
    <string name="settings_download_only_on_wifi_summary">To reduce carrier charges, don\'t download over mobile networks</string>
    <string name="settings_download_missing_artwork_title">Download missing album art</string>
    <string name="settings_download_artist_images_title">Download missing artist images</string>
    <string name="settings_open_source_licenses">Open source licenses</string>
    <string name="settings_version_title">Version number</string>
    <string name="now_listening_to">#NowPlaying <xliff:g id="title">%1$s</xliff:g> by <xliff:g id="artist">%2$s</xliff:g> #Apollo</string>
    <string name="share_track_using">Share track using:</string>
    <string name="color_picker_title">Color scheme</string>
    <string name="hex" translatable="false">#</string>
    <string name="current_color">Current</string>
    <string name="new_color">New</string>
    <string name="app_widget_small" translatable="false">Music: 4×1</string>
    <string name="app_widget_large" translatable="false">Music: 4×2</string>
    <string name="app_widget_large_alt">Music: 4×2 (alternate)</string>
    <string name="app_widget_recent">Music: recently listened</string>
    <string name="app_widget_text_separator" translatable="false">-</string>
    <string name="apollo_themes_shop_key" translatable="false">Apollo Themes</string>
    <string name="no_effects_for_you">The equalizer could not be opened.</string>
    <string name="empty_music">To copy music from your computer to your device, use a USB cable.</string>
    <string name="empty_search">NO SEARCH RESULTS FOR</string>
    <string name="empty_search_check">Please check that you have the correct spelling or try a different keyword.</string>
    <string name="empty_favorite">Songs you mark as favorites will be shown here.</string>
    <string name="empty_recent_main">NO RECENT SONGS</string>
    <string name="empty_recent">Songs you have listened to recently will show up here.</string>
    <string name="empty_playlist_main">NO SONGS IN PLAYLIST</string>
    <string name="empty_playlist_secondary">To add songs to this playlist, tap the options menu on a song, album or artist and select \"Add to playlist\".</string>
    <string name="empty_top_tracks_main">NO TOP TRACKS</string>
    <string name="empty_top_tracks_secondary">The songs you listen to most will be added to this list.</string>
    <string name="empty_last_added_main">NO SONGS ADDED RECENTLY</string>
    <string name="empty_last_added">Songs you have added over the last month will be shown here.</string>
    <string name="empty_generic_main">NO MUSIC FOUND</string>
    <string name="empty_generic_secondary">To copy music from your computer to your device, use a USB cable.</string>
    <string name="empty_queue_main">NO SONGS IN PLAY QUEUE</string>
    <string name="empty_queue_secondary">To add songs to your Play Queue, tap the options menu on a song, album, or artist and select &#8220;Add to queue&#8221;.</string>
    <string name="header_unknown_year">Unknown Year</string>
    <string name="header_less_than_30s">Less than 30s</string>
    <string name="header_30_to_60_seconds">30 - 60 seconds</string>
    <string name="header_1_to_2_minutes">1 - 2 minutes</string>
    <string name="header_2_to_3_minutes">2 - 3 minutes</string>
    <string name="header_3_to_4_minutes">3 - 4 minutes</string>
    <string name="header_4_to_5_minutes">4 - 5 minutes</string>
    <string name="header_5_to_10_minutes">5 - 10 minutes</string>
    <string name="header_10_to_30_minutes">10 - 30 minutes</string>
    <string name="header_30_to_60_minutes">30 - 60 minutes</string>
    <string name="header_greater_than_60_minutes">More than 60 minutes</string>
    <string name="header_1_song">1 Song</string>
    <string name="header_2_to_4_songs">2 - 4 Songs</string>
    <string name="header_5_to_9_songs">5 - 9 Songs</string>
    <string name="header_10_plus_songs">10+ Songs</string>
    <string name="header_1_album">1 Album</string>
    <string name="header_n_albums"><xliff:g id="number">%d</xliff:g> Albums</string>
    <string name="header_5_plus_albums">5+ Albums</string>
    <string name="footer_search_artists">Show all artists</string>
    <string name="footer_search_albums">Show all albums</string>
    <string name="footer_search_songs">Show all songs</string>
    <string name="footer_search_playlists">Show all playlists</string>
</resources>