<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2012 Andrew Neal
 
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
 
       http://www.apache.org/licenses/LICENSE-2.0
 
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/album_art_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@android:id/progress"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" >

            <com.cyngn.eleven.widgets.SquareViewPager
                android:id="@+id/audio_player_album_art_viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/shadow_height"
                android:layout_alignTop="@+id/audio_player_album_art_viewpager"
                android:contentDescription="@null"
                android:src="@drawable/top_shadow" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/shadow_height"
                android:layout_alignBottom="@+id/audio_player_album_art_viewpager"
                android:contentDescription="@null"
                android:src="@drawable/bottom_shadow" />

        </RelativeLayout>

        <!-- This is the add to playlist, track name and menu button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/audio_player_header_padding_bottom">

            <ImageView
                android:id="@+id/action_button_add_to_playlist"
                android:layout_width="@dimen/audio_player_controls_top_button_width"
                android:layout_height="@dimen/audio_player_controls_top_button_height"
                android:layout_weight="0"
                android:scaleType="centerInside"
                android:src="@drawable/btn_add_to_playlist" />

            <TextView
                android:id="@+id/audio_player_track_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:gravity="center_horizontal"
                android:marqueeRepeatLimit="marquee_forever"
                android:paddingLeft="@dimen/audio_player_track_name_padding_side"
                android:paddingRight="@dimen/audio_player_track_name_padding_side"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/audio_player_text_color"
                android:textSize="@dimen/audio_player_track_text_size"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/action_button_menu"
                android:layout_width="@dimen/audio_player_controls_top_button_width"
                android:layout_height="@dimen/audio_player_controls_top_button_height"
                android:layout_weight="0"
                android:scaleType="centerInside"
                android:src="@drawable/menu_button" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <FrameLayout
                android:id="@+id/play_pause_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/accessibility_play">
                <include
                    android:layout_width="@dimen/audio_player_controls_main_button_width"
                    android:layout_height="@dimen/audio_player_controls_main_button_height"
                    layout="@layout/play_pause_progress_button"/>
            </FrameLayout>

            <!-- TODO: Figure out why scaleType: centerInside isn't properly scaling up -->
            <!-- This is the left side of the progress bar - it has the previous
            and shuffle button and the current time text -->
            <RelativeLayout
                android:layout_width="@dimen/audio_player_controls_side_width"
                android:layout_height="fill_parent"
                android:layout_toLeftOf="@id/play_pause_container"
                android:paddingTop="@dimen/audio_player_control_padding_top">
                <com.cyngn.eleven.widgets.RepeatingImageButton
                    android:id="@+id/action_button_previous"
                    android:layout_width="@dimen/audio_player_controls_end_button_width"
                    android:layout_height="@dimen/audio_player_controls_end_button_height"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:scaleType="center"
                    android:src="@drawable/btn_playback_previous" />

                <TextView
                    android:id="@+id/audio_player_current_time"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/audio_player_controls_end_button_height"
                    android:gravity="center_vertical"
                    android:layout_toRightOf="@id/action_button_previous"
                    android:paddingLeft="@dimen/audio_player_time_text_padding"
                    android:textColor="@color/audio_player_text_color"
                    android:textSize="@dimen/audio_player_time_text_size"
                    android:textStyle="bold"/>

                <com.cyngn.eleven.widgets.ShuffleButton
                    android:id="@+id/action_button_shuffle"
                    android:layout_width="@dimen/audio_player_controls_end_button_width"
                    android:layout_height="@dimen/audio_player_controls_end_button_height"
                    android:layout_below="@id/action_button_previous"
                    android:layout_alignLeft="@id/audio_player_current_time"
                    android:contentDescription="@string/accessibility_shuffle"
                    android:scaleType="center"
                    android:src="@drawable/btn_playback_shuffle" />
            </RelativeLayout>

            <!-- This is the right side of the progress bar - it has the next
            and repeat button and the total time text -->
            <RelativeLayout
                android:layout_width="@dimen/audio_player_controls_side_width"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@id/play_pause_container"
                android:paddingTop="@dimen/audio_player_control_padding_top">
                <com.cyngn.eleven.widgets.RepeatingImageButton
                    android:id="@+id/action_button_next"
                    android:layout_width="@dimen/audio_player_controls_end_button_width"
                    android:layout_height="@dimen/audio_player_controls_end_button_height"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:scaleType="center"
                    android:src="@drawable/btn_playback_next" />

                <TextView
                    android:id="@+id/audio_player_total_time"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/audio_player_controls_end_button_height"
                    android:layout_toLeftOf="@id/action_button_next"
                    android:gravity="right|center_vertical"
                    android:paddingRight="@dimen/audio_player_time_text_padding"
                    android:textColor="@color/audio_player_text_color"
                    android:textSize="@dimen/audio_player_time_text_size"
                    android:textStyle="bold"/>

                <com.cyngn.eleven.widgets.RepeatButton
                    android:id="@+id/action_button_repeat"
                    android:layout_width="@dimen/audio_player_controls_end_button_width"
                    android:layout_height="@dimen/audio_player_controls_end_button_height"
                    android:layout_below="@id/action_button_next"
                    android:layout_alignRight="@id/audio_player_total_time"
                    android:contentDescription="@string/accessibility_repeat"
                    android:focusable="true"
                    android:scaleType="center"
                    android:src="@drawable/btn_playback_repeat" />

            </RelativeLayout>

        </RelativeLayout>
    </LinearLayout>
</FrameLayout>